# homework__rozhkov_mykhailo_docker__29_06_24

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/helpers/: __init__.py  fill_table_with_fake_data.py  get_faker_seed.py  get_number_of_people.py  init_app_settings.py  init_table.py  print_table.py  set_faker_settings.py
